# tadam

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-mypy.ini  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tadam/: __init__.py  assertions.py  utils.py
tadam/dataprocessing/: __init__.py  dataprocessing.py
tadam/math/: __init__.py  math.py
tests/: test_assertions.py
