[tool.poetry]
name = "tadam"
version = "0.0.2"
description = ""
authors = [
    "Tariq Dam <t.dam@amsterdamumc.nl>",
]
maintainers = [
    "Tariq Dam <t.dam@amsterdamumc.nl>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
joblib = "^1.3.0"
duckdb = "^0.8.1"
numpy = "^1.25.1"

[tool.poetry.group.lint.dependencies]
black = "~23.3.0"
flake8 = "~6.0.0"
isort = "~5.12.0"
mypy = "~1.7.0"
pre-commit = "~2.17.0"
pydantic = "~1.10.7"
pydocstyle = "~6.3.0"
types-PyYAML = "~6.0.12.1"
ruff = "~0.1.5" # soon to replace flake8

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[tool.poetry.group.test.dependencies]
coverage = { version = "^7.2.3", extras = ["toml"] }
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = false
source = ["tadam/"]
omit = ["*/tests/*", "setup.py"]

[tool.coverage.report]
fail_under = 100
ignore_errors = false
show_missing = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Verbose wrappers
    "if verbose",
    "if plot",
    "if show",
    # Mypyp
    "if TYPE_CHECKING",

    # abstract methods
    "@abstractmethod",
]


[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = 'black'

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = '3.11'
exclude = ['^tests/.']
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pydocstyle]
ignore = "D100, D104, D107, D202, D203, D213, D400, D413, D415"
match_dir = '^(tadam)'

[tool.ruff]
line-length = 88